k8s/apps/omarmassfih-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omarmassfih-backend
spec:
  selector: { app: omarmassfih-backend }
  ports:
    - name: http
      port: 8000
      targetPort: http
