k8s/apps/omarmassfih-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omarmassfih-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts: [backend.omarmassfih.no]
      secretName: omarmassfih-backend-tls
  rules:
    - host: backend.omarmassfih.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omarmassfih-backend
                port: { name: http }
